Adding a VMWare mouse input server filter add-on. It supports the same io port based protocol as the X vmmouse driver does. It yields proper absolute pointer positions under both the normal VMWare console and using the builtin VNC server. Therefore "fixes" the issue seen in #4630.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33298 a95241bf-73f2-0310-859d-f6bbb57e9c96